--- a/index.css
+++ b/index.css
@@ -1,6 +1,19 @@
 body{
     background-color:black;
 }
+.cabecalho {
+    background-color: whitesmoke;
+    font-family: Arial;
+    margin-bottom: 1%;/*espaço externo*/
+    padding: 10px 0;/*espaço interno*/
+}
+.cabecalho h1{
+    font-size: 200%;
+    text-align: center;
+    color: rgb(0, 0, 0);
+    padding: 10px 0;
+    text-shadow: 2px 2px rgb(153, 152, 152);
+}
 .eu{
     border: 3px solid grey;
     width: 150px;
@@ -8,4 +21,8 @@ body{
 }
 .texto{
     color: white;
+    font-family: Cambria;
+}
+a{
+    text-decoration: none;
 }
