--- a/index.css
+++ b/index.css
@@ -1,15 +1,201 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    outline:none;
+}
+
 body {
-    background-color:black;
+    background-color:#fff;
+    font:400 14px Roboto, sans-serif;
+}
+
+button {
+    font:400 18px Roboto, sans-serif;
+    cursor:pointer;
+}
+
+.container-portfolio {
+    width:100%;
+}
+
+.container-portfolio header {
+    background:#252525;
+    padding:0 100px;
     color:white;
+    height:100vh;
+    position:relative;
 }
 
-.cabecalho {
-    background-color: whitesmoke;
-    font-family: Arial;
-    margin-bottom: 1%;/*espaço externo*/
-    padding: 10px 0;/*espaço interno*/
+.container-portfolio header .borda-header {
+    width:100%;
+    position:absolute;
+    bottom:-1px;
+    left:0;
+    z-index: 0;
 }
 
+.container-portfolio header nav {
+    padding:20px 0;
+    font-size:20px;
+    font-weight: 500;
+}
+
+.container-portfolio header .sobre-eu {
+    display:flex;
+    justify-content:space-between;
+    align-items:center;
+}
+
+.container-portfolio header .sobre-eu img {
+    border-radius:10px;
+}
+
+.container-portfolio header .sobre-eu .foto-informacao {
+    font-size:20px;
+}
+
+.sobre-eu .foto-informacao h3 {
+    margin-bottom:20px;
+}
+
+.sobre-eu .foto-informacao h3 span {
+    font-size:50px;
+    font-weight: 500;
+}
+
+.sobre-eu .foto-informacao p {
+    font-weight: 500;
+    margin-bottom:20px;
+}
+
+.sobre-eu .foto-informacao .ver-mais {
+    background:none;
+    border:3px solid #fff;
+    color:white;
+    width:250px;
+    height:50px;
+    border-radius:10px;
+    margin-bottom:20px;
+}
+
+.sobre-eu .foto-informacao .ver-mais:hover {
+    background:white;
+    color:#333;
+}
+
+.sobre-eu .icones-social {
+    display:flex;
+    justify-content:flex-start;
+    align-items:center;
+}
+
+.sobre-eu .icones-social a svg,
+.sobre-eu .icones-social a img {
+    width:40px;
+    height:40px;
+    margin-right:20px;
+}
+
+.sobre-eu .urionlinejudge a button {
+    width:200px;
+    height:45px;
+    border:3px solid #fff;
+    background:none;
+    color:white;
+    border-radius:25px;
+    transition:0.2s linear;
+    margin:10px 0;
+}
+
+.sobre-eu .urionlinejudge button:hover {
+    background:white;
+    color:#333;
+}
+
+.container-portfolio article {
+    padding:0 50px;
+}
+
+.container-portfolio article .sobre {
+    width:100%;
+    border-bottom:2px solid #999;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+}
+
+.container-portfolio article .sobre p {
+    font-size:36px;
+    position:relative;
+    font-weight: bold;
+    top:20px;
+    background:white;
+    padding:0 20px;
+}
+
+.container-portfolio article ul {
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap:20px 100px;
+    list-style-type: none;
+    margin:70px 100px;
+}
+
+.container-portfolio article ul li {
+    background:white;
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.25);
+    margin-bottom:100px;
+    padding:20px;
+}
+
+.container-portfolio article ul li:nth-child(1) {
+    border-left: 9px solid #FF3E3E;
+}
+
+.container-portfolio article ul li:nth-child(2) {
+    border-left:9px solid #FFB636;  
+}
+
+.container-portfolio article ul li .titulo {
+    display:flex;
+    align-items:center;
+    margin-bottom: 20px;
+}
+
+.container-portfolio article ul li .titulo img {
+    width:95px;
+    height:95px;
+    margin-right:35px;
+}
+
+.container-portfolio article ul li .titulo p {
+    font-size:36px;
+    font-weight: bold;
+
+}
+
+.container-portfolio article ul li p {
+    font-size:24px;
+    font-weight:bold;
+    color: #000;
+}
+
+.container-portfolio article ul li p span {
+    color:#474747;
+}
+
+
+
+
+
+
+
+
+
+/*
 .cabecalho h1 {
     font-size: 200%;
     text-align: center;
@@ -23,14 +209,16 @@ body {
     margin-top: 5px;
     width: 150px;
     height: 150px;
-    border-radius: 50%; /*torna a foto circular*/
+    border-radius: 50%; torna a foto circular
 }
 
 main {
     font-family: Cambria;
 }
 
-/* tira o traço dos botões */
+tira o traço dos botões
 a {
     text-decoration: none;
 }
+
+*/
