--- a/index.css
+++ b/index.css
@@ -99,20 +99,8 @@ button {
     margin-right:20px;
 }
 
-.sobre-eu .urionlinejudge a button {
-    width:200px;
-    height:45px;
-    border:3px solid #fff;
-    background:none;
-    color:white;
-    border-radius:25px;
-    transition:0.2s linear;
-    margin:10px 0;
-}
-
-.sobre-eu .urionlinejudge button:hover {
-    background:white;
-    color:#333;
+#trophy {
+  margin-bottom: 60px;
 }
 
 .container-portfolio article {
