--- a/index.css
+++ b/index.css
@@ -90,17 +90,18 @@ button {
     display:flex;
     justify-content:flex-start;
     align-items:center;
+    margin-top:20px;
 }
 
-.sobre-eu .icones-social a svg,
-.sobre-eu .icones-social a img {
+.sobre-eu .icones-social a svg {
     width:40px;
     height:40px;
-    margin-right:20px;
+    margin-right:10px;
+    transition:0.2s linear;
 }
 
-#trophy {
-  margin-bottom: 60px;
+.sobre-eu .icones-social a svg:hover path {
+    color:#999999;
 }
 
 .container-portfolio article {
