--- a/responsive-design.css
+++ b/responsive-design.css
@@ -49,9 +49,28 @@
 	}
 }
 
+@media (max-width:445px) {
+	.container-portfolio article ul {
+		margin:70px 10px;
+	}
+
+	.container-portfolio article ul li .titulo img {
+		width:60px;
+		height:60px;
+		margin-right:20px;
+	}
+
+	.container-portfolio article ul li .titulo p {
+		font-size:28px;
+	}
+
+	.container-portfolio article ul li p {
+		font-size:20px;
+	}
+}
+
 @media (max-width:410px) {
 	.container-portfolio header .sobre-eu {
-		flex-direction:column-reverse;
-		align-items:flex-start;
+		padding:20px 0;
 	}
 }
